Move build and compiler to Java 16.
Closes #606.