@@ -34,6 +34,9 @@
 	</modules>
 
 	<properties>
+		<maven.compiler.source>16</maven.compiler.source>
+		<maven.compiler.target>16</maven.compiler.target>
+		<byte-buddy.version>1.11.0</byte-buddy.version>
 		<apt.version>1.1.3</apt.version>
 		<jvm.enable-preview></jvm.enable-preview>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -52,163 +55,6 @@
 			<properties>
 				<spring-data-bom.version>2021.0.1-SNAPSHOT</spring-data-bom.version>
 			</properties>
-		</profile>
-
-		<profile>
-			<id>java8</id>
-
-			<activation>
-				<jdk>1.8</jdk>
-			</activation>
-
-			<modules>
-
-				<!-- Embedded Cassandra (cassandra-all) is not compatible with Java runtime 9 and higher.
-				 See https://issues.apache.org/jira/browse/CASSANDRA-9608 -->
-				<module>cassandra</module>
-			</modules>
-		</profile>
-
-		<profile>
-			<id>java11</id>
-
-			<activation>
-				<jdk>11</jdk>
-			</activation>
-		</profile>
-
-		<profile>
-			<id>java-next</id>
-
-			<activation>
-				<jdk>[9,)</jdk>
-			</activation>
-
-			<dependencies>
-				<dependency>
-					<groupId>javax.xml.bind</groupId>
-					<artifactId>jaxb-api</artifactId>
-				</dependency>
-				<dependency>
-					<groupId>javax.annotation</groupId>
-					<artifactId>javax.annotation-api</artifactId>
-				</dependency>
-			</dependencies>
-		</profile>
-
-		<profile>
-			<id>java-13+</id>
-
-			<activation>
-				<jdk>[13,)</jdk>
-			</activation>
-
-			<properties>
-				<jvm.enable-preview>--enable-preview</jvm.enable-preview>
-			</properties>
-
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<release>13</release>
-							<compilerArgs>
-								${jvm.enable-preview}
-							</compilerArgs>
-						</configuration>
-					</plugin>
-					<plugin>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<argLine>${jvm.enable-preview}</argLine>
-						</configuration>
-					</plugin>
-					<plugin>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>${jvm.enable-preview}</argLine>
-						</configuration>
-					</plugin>
-
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>java-13</id>
-
-			<activation>
-				<jdk>13</jdk>
-			</activation>
-
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<release>13</release>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>java-14</id>
-
-			<activation>
-				<jdk>14</jdk>
-			</activation>
-
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<release>14</release>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>java-15</id>
-
-			<activation>
-				<jdk>15</jdk>
-			</activation>
-
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<release>15</release>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>java-16</id>
-
-			<activation>
-				<jdk>16</jdk>
-			</activation>
-
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<release>16</release>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
 		</profile>
 
 	</profiles>
@@ -274,9 +120,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>org.junit.jupiter</groupId>
-		    <artifactId>junit-jupiter-engine</artifactId>
-		    <scope>test</scope>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
@@ -284,8 +130,31 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Java 9++ dependencies -->
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+		</dependency>
 
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<release>16</release>
+					<parameters>true</parameters>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<repositories>
 		<repository>
